; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/spiffs/extr_spiffs_nucleus.c_spiffs_page_data_check.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/spiffs/extr_spiffs_nucleus.c_spiffs_page_data_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@SPIFFS_OK = common dso_local global i32 0, align 4
@SPIFFS_ERR_INDEX_REF_FREE = common dso_local global i32 0, align 4
@SPIFFS_ERR_INDEX_REF_LU = common dso_local global i32 0, align 4
@SPIFFS_ERR_INDEX_REF_INVALID = common dso_local global i32 0, align 4
@SPIFFS_OBJ_ID_IX_FLAG = common dso_local global i32 0, align 4
@SPIFFS_OP_C_READ = common dso_local global i32 0, align 4
@SPIFFS_OP_T_OBJ_DA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_3__*, i32, i32)* @spiffs_page_data_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spiffs_page_data_check(i32* %0, %struct.TYPE_3__* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* @SPIFFS_OK, align 4
  store i32 %11, i32* %10, align 4
  %12 = load i32, i32* %8, align 4
  %13 = icmp eq i32 %12, -1
  br i1 %13, label %14, label %16

14:                                               ; preds = %4
  %15 = load i32, i32* @SPIFFS_ERR_INDEX_REF_FREE, align 4
  store i32 %15, i32* %5, align 4
  br label %35

16:                                               ; preds = %4
  %17 = load i32, i32* %8, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @SPIFFS_PAGES_PER_BLOCK(i32* %18)
  %20 = srem i32 %17, %19
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @SPIFFS_OBJ_LOOKUP_PAGES(i32* %21)
  %23 = icmp slt i32 %20, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %16
  %25 = load i32, i32* @SPIFFS_ERR_INDEX_REF_LU, align 4
  store i32 %25, i32* %5, align 4
  br label %35

26:                                               ; preds = %16
  %27 = load i32, i32* %8, align 4
  %28 = load i32*, i32** %6, align 8
  %29 = call i32 @SPIFFS_MAX_PAGES(i32* %28)
  %30 = icmp sgt i32 %27, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %26
  %32 = load i32, i32* @SPIFFS_ERR_INDEX_REF_INVALID, align 4
  store i32 %32, i32* %5, align 4
  br label %35

33:                                               ; preds = %26
  %34 = load i32, i32* %10, align 4
  store i32 %34, i32* %5, align 4
  br label %35

35:                                               ; preds = %33, %31, %24, %14
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local i32 @SPIFFS_PAGES_PER_BLOCK(i32*) #1

declare dso_local i32 @SPIFFS_OBJ_LOOKUP_PAGES(i32*) #1

declare dso_local i32 @SPIFFS_MAX_PAGES(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
